fixed image spacing on mobile home page

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -14,6 +14,7 @@
       img {
         display: block;
         margin: 0 auto;
+        @include rem-fallback(margin-bottom, $half-spacing)
       }
       
       .text {
